...
  }

  /// Send a password recovery link to your email field label
  /// found in:
  /// - PasswordRecoveryView
  public var passwordRecoveryEmailFieldLabel: String {
    return localizedString(for: "Send a password recovery link to your email")
  }

  /// Send a sign-in link to your email field label
  /// found in:
  /// - EmailLinkView
  public var signInLinkEmailFieldLabel: String {
    return localizedString(for: "Send a sign-in link to your email")
  }

  /// Enter phone number prompt
  /// found in:
  /// - MFAEnrolmentView
  public var enterPhoneNumberPrompt: String {
...
