...

extension SignInWithFacebookButton: View {
  public var body: some View {
    AuthProviderButton(
      label: authService.string.facebookLoginButtonLabel,
      style: .facebook,
      accessibilityId: "sign-in-with-facebook-button"
    ) {
      Task {
        do {
          let outcome = try await authService.signIn(facebookProvider)

          // Handle MFA at view level
...
