...
                                    email: String) -> some View {
    switch option.id {
    case EmailAuthProviderID:
      AuthProviderButton(
        label: option.displayName,
        style: .email,
        accessibilityId: "legacy-sign-in-with-email-button"
      ) {
        self.startLegacyRecovery(option: option, email: email)
      }
    case emailLinkSignInMethod:
      AuthProviderButton(
        label: option.displayName,
        style: .email,
        accessibilityId: "legacy-sign-in-with-email-link-button"
      ) {
        self.startLegacyRecovery(option: option, email: email)
      }
    case "phone":
      AuthProviderButton(
        label: option.displayName,
...
