...
          FormValidators.email,
        ],
        leading: {
          Image(systemName: "at")
        }
      )
      .accessibilityIdentifier("email-link-email-field")
      Button {
        Task {
          try await sendEmailLink()
          authService.emailLink = email
        }
      } label: {
...
